@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-20T01:47:49Z",
+  "timestamp" : "2022-09-20T16:23:54Z",
   "count_outdated" : 527,
   "uniques_outdated" : 305,
-  "count" : 560,
-  "uniques" : 322,
+  "count" : 561,
+  "uniques" : 323,
   "clones" : [
     {
       "timestamp": "2022-09-07T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-09-19T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
